2014-10-24  Timothy Horton  <timothy_horton@apple.com>

        Blindly try to fix the 32-bit build.

        * UIProcess/mac/WKActionMenuController.h:
        * UIProcess/mac/WKActionMenuController.mm:

2014-10-24  Tim Horton  <timothy_horton@apple.com>

        [Mac][WebKit2] Move action menu code into its own file
        https://bugs.webkit.org/show_bug.cgi?id=138034
        <rdar://problem/18758758>

        * UIProcess/mac/WKActionMenuController.mm:
        (-[WKActionMenuController prepareForMenu:withEvent:]):
        (-[WKActionMenuController _addImageToPhotos:]):
        Review comments that were not previously addressed.

2014-10-24  Tim Horton  <timothy_horton@apple.com>

        [Mac][WebKit2] Move action menu code into its own file
        https://bugs.webkit.org/show_bug.cgi?id=138034
        <rdar://problem/18758758>

        Reviewed by Dan Bernstein.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView initWithFrame:context:configuration:webView:]):
        Make a WKActionMenuController if needed.

        (-[WKView prepareForMenu:withEvent:]):
        (-[WKView willOpenMenu:withEvent:]):
        (-[WKView didCloseMenu:withEvent:]):
        (-[WKView _didPerformActionMenuHitTest:]):
        Forward these to WKActionMenuController.

        (-[WKView _openURLFromActionMenu:]): Deleted.
        (-[WKView _addToReadingListFromActionMenu:]): Deleted.
        (-[WKView _quickLookURLFromActionMenu:]): Deleted.
        (-[WKView _createActionMenuItemForTag:]): Deleted.
        (webKitBundleImageNamed): Deleted.
        (-[WKView _copyImage:]): Deleted.
        (-[WKView _saveImageToDownloads:]): Deleted.
        (temporaryPhotosDirectoryPath): Deleted.
        (pathToPhotoOnDisk): Deleted.
        (-[WKView _addImageToPhotos:]): Deleted.
        (-[WKView _defaultMenuItemsForImage]): Deleted.
        (-[WKView _defaultMenuItems]): Deleted.
        (-[WKView _updateActionMenu]): Deleted.
        Moved to WKActionMenuController.
